@@ -3,6 +3,7 @@
    # Now configuring JSplitPane's divider positions (MainDividerLocation, FirstSmallDividerLocation and SecondSmallDividerLocation properties) in percentage (not in an absolute values)
    # Shark mode:
       - support for AUTO_COMPLETION extended attribute for manual activities
+      - improved performance and accuracy when moving entries for the Activity's 'Web client configuration->Default GUI->Variables'
 
 2015-07-31 Sasa Bojanic <sasaboy@together.at>
    # Shark mode:
